<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPasswordBody"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_primary"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    tools:context=".ui.login.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/lytForgotHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnForgotBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_plain_click_style"
            android:drawableStart="?attr/homeAsUpIndicator"
            android:elevation="0dp"
            android:fontFamily="@font/jost"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/string_back"
            android:textColor="@color/white"
            app:iconTint="@color/white" />

        <TextView
            android:id="@+id/tvForgotPasswordTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/jost"
            android:text="@string/str_reset_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/dvrAccountHeader"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytForgotHeader" />

    <LinearLayout
        android:id="@+id/fpFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dvrAccountHeader">

        <TextView
            android:id="@+id/tvForgotEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_email"
            android:textColor="@color/gray_secondary_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/gray_secondary_dark"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray_secondary_dark"
            android:textCursorDrawable="@null" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnForgotArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/resetLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnConfirmEmail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:elevation="2dp"
                android:enabled="true"
                android:fontFamily="@font/jost"
                android:text="@string/str_send_reset"
                android:textColor="@color/gray_contrast"
                android:textSize="16sp"
                android:theme="@style/AccentButton"
                app:cornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/yellow_variant" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lytForgotPasswordInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dvrAccountHeader">

        <TextView
            android:id="@+id/tvForgotSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/str_img_text_reset_email_success"
            android:drawableTop="@drawable/mail"
            android:drawablePadding="10dp"
            android:fontFamily="@font/jost"
            android:gravity="center_horizontal"
            android:text="@string/str_password_reset_successful"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/tvForgotInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/str_reset_password_msg"
            android:textColor="@color/gray_secondary_dark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvForgotValidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/jost"
                android:text="@string/str_password_reset_question"
                android:textColor="@color/gray_secondary_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvForgotBackLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_plain_click_style"
                android:fontFamily="@font/jost"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/str_login"
                android:textColor="@color/yellow_primary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>